--- a/VehicleTelemetry/qml.qrc
+++ b/VehicleTelemetry/qml.qrc
@@ -1,7 +1,35 @@
-<!DOCTYPE RCC>
-<RCC version="1.0">
+<RCC>
     <qresource prefix="/">
         <file>main.qml</file>
         <file>MainForm.ui.qml</file>
+        <file>MySlider.qml</file>
+        <file>VerticalIndicator.qml</file>
+        <file>FrontTemperaturePannel.qml</file>
+        <file>FrontTemperatureIndicatorPannel.qml</file>
+        <file>BackTemperatureIndicatorPannel.qml</file>
+        <file>BackTemperaturePannel.qml</file>
+        <file>Filler.qml</file>
+        <file>AmbientTempDisplay.qml</file>
+        <file>MyDial.qml</file>
+        <file>FanSpeedIndicator.qml</file>
+        <file>CentralPannel.qml</file>
+        <file>ACButton.qml</file>
+        <file>ReciculationButton.qml</file>
+        <file>ButtonPannel.qml</file>
+        <file>images/background.jpg</file>
+        <file>images/fan_control_ac_off.png</file>
+        <file>images/fan_control_ac_on.png</file>
+        <file>images/fan_control_circ_off.png</file>
+        <file>images/fan_control_circ_on.png</file>
+        <file>images/fan_icon_off.png</file>
+        <file>images/hvac_app_icon.svg</file>
+        <file>images/left_heat.png</file>
+        <file>images/right_heat.png</file>
+        <file>images/separator.png</file>
+        <file>images/textbg.png</file>
+        <file>images/textdisplaybg.svg</file>
+        <file>images/rear_temp.png</file>
+        <file>images/front_temp.png</file>
+        <file>TemperatureButton.qml</file>
     </qresource>
 </RCC>
